--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-nvidia-prime (0.1) unstable; urgency=low
+nvidia-prime (0.1) UNRELEASED; urgency=low
 
   * Initial Release.
 
- -- Alberto Milone <alberto.milone@canonical.com>  Thu, 02 May 2013 16:40:23 +0200
+ -- Alberto Milone <alberto.milone@canonical.com>  Fri, 24 May 2013 11:50:20 +0200
