--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-nvidia-prime (0.1) UNRELEASED; urgency=low
+nvidia-prime (0.1) saucy; urgency=low
 
   * Initial Release.
 
- -- Alberto Milone <alberto.milone@canonical.com>  Fri, 24 May 2013 11:50:20 +0200
+ -- Alberto Milone <alberto.milone@canonical.com>  Fri, 31 May 2013 14:10:46 +0200
