Start work on 0.2

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.2) UNRELEASED; urgency=low
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Tue, 02 Jul 2013 10:33:51 +0200
+
 nvidia-prime (0.1) saucy; urgency=low
 
   * Initial Release.
