--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
-nvidia-prime (0.2) UNRELEASED; urgency=low
+nvidia-prime (0.2) saucy; urgency=low
 
-  * 
+  * debian/control:
+    - Conflict/replace/provide the hybrid-graphics virtual
+      package.
+  * Make sure to start X instead of XMir or hybrid graphics
+    won't work, at least for now.
 
- -- Alberto Milone <alberto.milone@canonical.com>  Tue, 02 Jul 2013 10:33:51 +0200
+ -- Alberto Milone <alberto.milone@canonical.com>  Wed, 03 Jul 2013 11:42:17 +0200
 
 nvidia-prime (0.1) saucy; urgency=low
 
