--- a/debian/changelog
+++ b/debian/changelog
@@ -1,15 +1,5 @@
-nvidia-prime (0.2) saucy; urgency=low
+nvidia-prime (0.2~hybrid0.0.1) UNRELEASED; urgency=low
 
-  * debian/control:
-    - Conflict/replace/provide the hybrid-graphics virtual
-      package.
-  * Make sure to start X instead of XMir or hybrid graphics
-    won't work, at least for now.
+  * 
 
- -- Alberto Milone <alberto.milone@canonical.com>  Wed, 03 Jul 2013 11:42:17 +0200
-
-nvidia-prime (0.1) saucy; urgency=low
-
-  * Initial Release.
-
- -- Alberto Milone <alberto.milone@canonical.com>  Fri, 31 May 2013 14:10:46 +0200
+ -- Alberto Milone <alberto.milone@canonical.com>  Tue, 23 Jul 2013 12:21:55 +0200
