--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.2ubuntu1) UNRELEASED; urgency=low
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Wed, 24 Jul 2013 08:52:07 +0200
+
 nvidia-prime (0.2) saucy; urgency=low
 
   * debian/control:
