--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.4) UNRELEASED; urgency=low
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Wed, 07 Aug 2013 17:15:14 +0200
+
 nvidia-prime (0.3) saucy; urgency=low
 
   * debian/postinst.in:
