--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.4~hybrid0.0.1) UNRELEASED; urgency=low
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Wed, 02 Oct 2013 17:38:37 +0200
+
 nvidia-prime (0.3~hybrid0.0.1) precise; urgency=low
 
   * Initial release (LP: #1198942).
