--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.5) UNRELEASED; urgency=low
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Wed, 23 Oct 2013 12:34:50 +0200
+
 nvidia-prime (0.4) saucy; urgency=low
 
   * debian/postinst.in, hybrid-power:
