--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.4.2) UNRELEASED; urgency=low
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Wed, 23 Oct 2013 15:07:20 +0200
+
 nvidia-prime (0.4.1) trusty; urgency=low
 
   * debian/preinst.in:
