--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-nvidia-prime (0.5~hybrid0.0.1) UNRELEASED; urgency=low
+nvidia-prime (0.5~hybrid0.0.1~preciseppa1) precise; urgency=low
 
-  * 
+  * New upstream release:
+    - Add support for power management.
 
- -- Alberto Milone <alberto.milone@canonical.com>  Wed, 23 Oct 2013 15:50:18 +0200
+ -- Alberto Milone <alberto.milone@canonical.com>  Fri, 25 Oct 2013 13:23:20 +0200
 
 nvidia-prime (0.3~hybrid0.0.1) precise; urgency=low
 
