--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.5~hybrid0.0.1~preciseppa2) UNRELEASED; urgency=low
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Wed, 04 Dec 2013 16:31:22 +0100
+
 nvidia-prime (0.5~hybrid0.0.1~preciseppa1) precise; urgency=low
 
   * New upstream release:
