--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.5.1) UNRELEASED; urgency=low
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Thu, 12 Dec 2013 15:43:59 +0100
+
 nvidia-prime (0.5) trusty; urgency=low
 
   * debian/control:
