--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
-nvidia-prime (0.5.1) UNRELEASED; urgency=low
+nvidia-prime (0.5.1) trusty; urgency=low
 
-  * 
+  * debian/nvidia-prime.upstart, prime-switch:
+    - Send events to start and to stop the
+      nvidia-persistenced upstart job.
 
- -- Alberto Milone <alberto.milone@canonical.com>  Thu, 12 Dec 2013 15:43:59 +0100
+ -- Alberto Milone <alberto.milone@canonical.com>  Tue, 17 Dec 2013 10:26:25 +0100
 
 nvidia-prime (0.5) trusty; urgency=low
 
