--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.5.3) UNRELEASED; urgency=low
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Mon, 06 Jan 2014 18:45:15 +0100
+
 nvidia-prime (0.5.2) trusty; urgency=low
 
   * debian/control:
