--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.5.4) UNRELEASED; urgency=low
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Tue, 28 Jan 2014 12:05:37 +0100
+
 nvidia-prime (0.5.3) trusty; urgency=low
 
   * debian/postrm.in, debian/rules:
