--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.5.5) UNRELEASED; urgency=low
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Wed, 29 Jan 2014 13:21:35 +0100
+
 nvidia-prime (0.5.4) trusty; urgency=low
 
   * Do not touch lightdm.conf any more on anything newer than Precise.
