--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.5.6) UNRELEASED; urgency=low
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Fri, 21 Feb 2014 09:46:07 +0100
+
 nvidia-prime (0.5.5) trusty; urgency=low
 
   * debian/rules:
