--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.5~hybrid0.0.3) UNRELEASED; urgency=low
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Fri, 21 Feb 2014 09:58:22 +0100
+
 nvidia-prime (0.5~hybrid0.0.2) precise-proposed; urgency=low
 
   * debian/control:
