--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.5.7) UNRELEASED; urgency=low
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Fri, 21 Feb 2014 13:56:52 +0100
+
 nvidia-prime (0.5.6) trusty; urgency=low
 
   [ Daniel Dadap ]
