--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-nvidia-prime (0.5.7) UNRELEASED; urgency=low
+nvidia-prime (0.5.7) trusty; urgency=low
 
-  * 
+  * debian/preinst.in:
+    - Do not remove the lightdm configuration file.
 
- -- Alberto Milone <alberto.milone@canonical.com>  Fri, 21 Feb 2014 13:56:52 +0100
+ -- Alberto Milone <alberto.milone@canonical.com>  Fri, 21 Feb 2014 14:49:59 +0100
 
 nvidia-prime (0.5.6) trusty; urgency=low
 
