--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.6) UNRELEASED; urgency=low
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Tue, 04 Mar 2014 16:27:22 +0100
+
 nvidia-prime (0.5.7) trusty; urgency=low
 
   * debian/preinst.in:
