--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.6.1) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Thu, 13 Mar 2014 16:47:32 +0100
+
 nvidia-prime (0.6) trusty; urgency=low
 
   * debian/control:
