--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-nvidia-prime (0.6.1) UNRELEASED; urgency=medium
+nvidia-prime (0.6.1) trusty; urgency=medium
 
-  * 
+  * debian/preinst.in, debian/rules:
+    - Move the lightdm configuration file from /etc to /usr/share.
 
- -- Alberto Milone <alberto.milone@canonical.com>  Thu, 13 Mar 2014 16:47:32 +0100
+ -- Alberto Milone <alberto.milone@canonical.com>  Thu, 13 Mar 2014 17:13:50 +0100
 
 nvidia-prime (0.6) trusty; urgency=low
 
