--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.6.2) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Fri, 14 Mar 2014 16:15:37 +0100
+
 nvidia-prime (0.6.1) trusty; urgency=medium
 
   * debian/preinst.in, debian/rules:
