Start work on 0.6.3

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.6.3) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Mon, 12 May 2014 15:43:10 +0200
+
 nvidia-prime (0.6.2) trusty; urgency=medium
 
   * prime-supported:
