--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-nvidia-prime (0.6.3) UNRELEASED; urgency=medium
+nvidia-prime (0.6.3) utopic; urgency=medium
 
-  * 
+  * prime-quirks:
+    - Add quirk for "Vostro 20 3015" (LP: #1310516).
 
- -- Alberto Milone <alberto.milone@canonical.com>  Mon, 12 May 2014 15:43:10 +0200
+ -- Alberto Milone <alberto.milone@canonical.com>  Mon, 12 May 2014 15:47:15 +0200
 
 nvidia-prime (0.6.2) trusty; urgency=medium
 
