--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.6.4) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Fri, 16 May 2014 13:16:04 +0200
+
 nvidia-prime (0.6.3) utopic; urgency=medium
 
   * prime-quirks:
