--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.6.5) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Thu, 22 May 2014 15:01:32 +0200
+
 nvidia-prime (0.6.4) utopic; urgency=medium
 
   * prime-quirks:
