--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.6.6) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Thu, 19 Jun 2014 11:52:59 +0200
+
 nvidia-prime (0.6.5) utopic; urgency=medium
 
   * debian/dirs.in, debian/install.in, oem/00-prime-offload:
