--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.7) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Fri, 16 Jan 2015 16:58:53 +0100
+
 nvidia-prime (0.6.6) utopic; urgency=medium
 
   * prime-select:
