--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
-nvidia-prime (0.7) UNRELEASED; urgency=medium
+nvidia-prime (0.7) vivid; urgency=medium
 
-  * 
+  * debian/control, debian/dirs.in, debian/install.in,
+    debian/nvidia-prime.service, debian/rules:
+    - Add support for systemd (LP: #1312255).
 
- -- Alberto Milone <alberto.milone@canonical.com>  Fri, 16 Jan 2015 16:58:53 +0100
+ -- Alberto Milone <alberto.milone@canonical.com>  Fri, 16 Jan 2015 19:32:00 +0100
 
 nvidia-prime (0.6.6) utopic; urgency=medium
 
