--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.8.1) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Thu, 02 Apr 2015 17:41:03 +0200
+
 nvidia-prime (0.8) vivid; urgency=medium
 
   * Drop upstart dependency, previous version added systemd support.
