--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.8.2) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Fri, 22 Jan 2016 16:42:22 +0100
+
 nvidia-prime (0.8.1) vivid; urgency=medium
 
   * debian/control:
