--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.8.4) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Mon, 25 Jul 2016 17:50:06 +0200
+
 nvidia-prime (0.8.3) yakkety; urgency=medium
 
   * debian/control:
