Start work on 0.8.5

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.8.5) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Mon, 09 Oct 2017 16:48:15 +0200
+
 nvidia-prime (0.8.4) yakkety; urgency=medium
 
   * debian/postrm.in:
