--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-nvidia-prime (0.8.5) UNRELEASED; urgency=medium
+nvidia-prime (0.8.5) artful; urgency=medium
 
-  * 
+  * debian/control, debian/rules, prime-select:
+    - Add support for and depend on python 3 (LP: #1721394).
 
- -- Alberto Milone <alberto.milone@canonical.com>  Mon, 09 Oct 2017 16:48:15 +0200
+ -- Alberto Milone <alberto.milone@canonical.com>  Mon, 10 Oct 2017 11:40:53 +0200
 
 nvidia-prime (0.8.4) yakkety; urgency=medium
 
