--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.8.6) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Mon, 19 Feb 2018 16:31:15 +0100
+
 nvidia-prime (0.8.5) artful; urgency=medium
 
   * debian/control, debian/rules, prime-select:
