--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-nvidia-prime (0.8.7) UNRELEASED; urgency=medium
+nvidia-prime (0.8.7) bionic; urgency=medium
 
-  * 
+  * prime-select:
+    - Do not fail if the blacklist file is not there (LP: #1763302).
 
- -- Alberto Milone <alberto.milone@canonical.com>  Thu, 12 Apr 2018 12:56:44 +0200
+ -- Alberto Milone <alberto.milone@canonical.com>  Thu, 12 Apr 2018 13:04:23 +0200
 
 nvidia-prime (0.8.6) bionic; urgency=medium
 
