--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.8.8~ppa1) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Thu, 19 Apr 2018 16:34:12 +0200
+
 nvidia-prime (0.8.7) bionic; urgency=medium
 
   * prime-select:
