--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.8.8) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Fri, 20 Apr 2018 11:59:22 +0200
+
 nvidia-prime (0.8.7) bionic; urgency=medium
 
   * prime-select:
