Start work on 0.8.9

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.8.9) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Wed, 20 Jun 2018 13:26:23 +0200
+
 nvidia-prime (0.8.8) bionic; urgency=medium
 
   * 90-nvidia.conf,
