--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.8.9~ppa2) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Mon, 02 Jul 2018 17:27:57 +0200
+
 nvidia-prime (0.8.9~ppa1) bionic; urgency=medium
 
   * debian/nvidia-prime.nvidia-prime-boot.service, debian/rules:
