--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.8.9~ppa3) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Mon, 16 Jul 2018 16:48:23 +0200
+
 nvidia-prime (0.8.9~ppa2) bionic; urgency=medium
 
   * prime-select:
