--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.8.10) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Fri, 28 Sep 2018 11:05:01 +0200
+
 nvidia-prime (0.8.9) cosmic; urgency=medium
 
   [ Alberto Milone ]
