--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.8.8.2) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Wed, 10 Oct 2018 17:05:56 +0200
+
 nvidia-prime (0.8.8.1) bionic; urgency=medium
 
   [ Alberto Milone ]
