--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,11 @@
-nvidia-prime (0.8.8.2) UNRELEASED; urgency=medium
+nvidia-prime (0.8.8.2) bionic; urgency=medium
 
-  * 
+  * prime-switch:
+    - Give udev the time to add the drm device. Fixes a race
+      condition that causes problems when using lightdm and
+      sddm (LP: #1797147).
 
- -- Alberto Milone <alberto.milone@canonical.com>  Wed, 10 Oct 2018 17:05:56 +0200
+ -- Alberto Milone <alberto.milone@canonical.com>  Wed, 10 Oct 2018 17:59:03 +0200
 
 nvidia-prime (0.8.8.1) bionic; urgency=medium
 
