--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.8.13) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Wed, 21 Aug 2019 17:18:34 +0200
+
 nvidia-prime (0.8.12) eoan; urgency=medium
 
   * prime-select:
