Start work on 0.8.14

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.8.14) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Wed, 19 Feb 2020 13:21:58 +0100
+
 nvidia-prime (0.8.13) eoan; urgency=medium
 
   * prime-select:
