Start work on 0.8.15

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.8.15) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Mon, 10 Aug 2020 16:19:56 +0200
+
 nvidia-prime (0.8.14) focal; urgency=medium
 
   * prime-offload:
