--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.8.16) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Wed, 18 Nov 2020 15:08:30 +0100
+
 nvidia-prime (0.8.15) groovy; urgency=medium
 
   [ Alberto Milone ]
