--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-nvidia-prime (0.8.16) UNRELEASED; urgency=medium
+nvidia-prime (0.8.15.1) hirsute; urgency=medium
 
-  * 
+  [ Anthony Fok ]
+  * Remove obsolete udev rules during `postrm upgrade` too
 
- -- Alberto Milone <alberto.milone@canonical.com>  Wed, 18 Nov 2020 15:08:30 +0100
+ -- Alberto Milone <alberto.milone@canonical.com>  Fri, 20 Nov 2020 16:19:39 +0100
 
 nvidia-prime (0.8.15) groovy; urgency=medium
 
