--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.8.15.1~0.18.04.1) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Thu, 26 Nov 2020 12:25:58 +0100
+
 nvidia-prime (0.8.8.2) bionic; urgency=medium
 
   * prime-switch:
