--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-nvidia-prime (0.8.15.1~0.18.04.1) UNRELEASED; urgency=medium
+nvidia-prime (0.8.15.1~0.18.04.1) bionic; urgency=medium
 
-  * 
+  * Backport 0.8.15.1 (LP: #1904583).
 
- -- Alberto Milone <alberto.milone@canonical.com>  Thu, 26 Nov 2020 12:25:58 +0100
+ -- Alberto Milone <alberto.milone@canonical.com>  Thu, 26 Nov 2020 12:26:58 +0100
 
 nvidia-prime (0.8.8.2) bionic; urgency=medium
 
