--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.8.15.2) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Thu, 07 Jan 2021 16:11:58 +0100
+
 nvidia-prime (0.8.15.1) hirsute; urgency=medium
 
   [ Anthony Fok ]
