--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.8.15.3) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Fri, 15 Jan 2021 17:38:42 +0100
+
 nvidia-prime (0.8.15.2) hirsute; urgency=medium
 
   * debian/postrm.in:
