Start work on 0.8.16

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.8.16) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Thu, 04 Feb 2021 11:08:36 +0100
+
 nvidia-prime (0.8.15.3) hirsute; urgency=medium
 
   * debian/rules:
