--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.8.16~0.20.04.1) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Wed, 10 Feb 2021 12:38:21 +0100
+
 nvidia-prime (0.8.15.3~0.20.04.1) focal; urgency=medium
 
   [ Alberto Milone ]
