--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.8.16.2) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Thu, 18 Mar 2021 11:58:56 +0100
+
 nvidia-prime (0.8.16.1) hirsute; urgency=medium
 
   * Drop dh-systemd build dependency.
