--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.8.17) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Fri, 03 Sep 2021 12:44:43 +0200
+
 nvidia-prime (0.8.16.2) hirsute; urgency=medium
  
   * prime-select:
