Start work on 0.8.17.1

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.8.17.1) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Fri, 08 Oct 2021 14:24:08 +0200
+
 nvidia-prime (0.8.17) impish; urgency=medium
 
   [ Jeremy Szu ]
