--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-prime (0.8.16~0.20.04.2) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Alberto Milone <alberto.milone@canonical.com>  Thu, 28 Oct 2021 16:36:39 +0200
+
 nvidia-prime (0.8.16~0.20.04.1) focal; urgency=medium
 
   * prime-select:
